@@ -1,3 +1,8 @@
+* 2014-10-08 - thorben.betten@open-xchange.com
+
+ - Fix for bug 34812: Restored required "read_stream" permission when initializing a new Facebook OAuth account,
+                      which is basically a revert for commit 145a880b7557d89754b509deeef34c4bcc1a84d5 (bug 34281)
+
 * 2014-10-07 - steffen.templin@open-xchange.com
 
  - Fix for bug 26354: Set user attributes without explicit database locking to avoid deadlocks.
